tests/reference/ast-fixed_form_2-f30c159.stderr
syntax error: Token 'x' (of type 'identifier') is unexpected here
 --> tests/errors/fixed_form_2.f:3:12
  |
3 |       y = 5x
  |            ^ 
